{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 8,
  "lineage": "9bd51974-da6b-00e0-d898-c77d74313344",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "xops_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:657570827875:instance/i-0ad1b608ada3fee13",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ad1b608ada3fee13",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-032b6d532627e3391"
              }
            ],
            "primary_network_interface_id": "eni-032b6d532627e3391",
            "private_dns": "ip-10-0-1-163.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.163",
            "public_ip": "52.90.84.98",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05a87640f60aa534f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-022445792befa09c0",
            "tags": {
              "Name": "xops-webserver"
            },
            "tags_all": {
              "Name": "xops-webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-038991cf13c0ecb00"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.xops_sg",
            "aws_subnet.xops_subnet",
            "aws_vpc.xops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "xops_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:657570827875:internet-gateway/igw-0463e13db3e383e1e",
            "id": "igw-0463e13db3e383e1e",
            "owner_id": "657570827875",
            "region": "us-east-1",
            "tags": {
              "Name": "xops-igw"
            },
            "tags_all": {
              "Name": "xops-igw"
            },
            "vpc_id": "vpc-0c74e7e20cc1ddb9c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.xops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "xops_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:657570827875:route-table/rtb-0cf3edbe9aa99cb31",
            "id": "rtb-0cf3edbe9aa99cb31",
            "owner_id": "657570827875",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0463e13db3e383e1e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "xops-rt"
            },
            "tags_all": {
              "Name": "xops-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c74e7e20cc1ddb9c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.xops_igw",
            "aws_vpc.xops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "xops_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05797bad6cc8d268c",
            "region": "us-east-1",
            "route_table_id": "rtb-0cf3edbe9aa99cb31",
            "subnet_id": "subnet-022445792befa09c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.xops_igw",
            "aws_route_table.xops_rt",
            "aws_subnet.xops_subnet",
            "aws_vpc.xops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "xops_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:657570827875:security-group/sg-038991cf13c0ecb00",
            "description": "Allow HTTP and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038991cf13c0ecb00",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "xops-sg",
            "name_prefix": "",
            "owner_id": "657570827875",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "xops-sg"
            },
            "tags_all": {
              "Name": "xops-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c74e7e20cc1ddb9c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "657570827875",
            "id": "sg-038991cf13c0ecb00",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.xops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "xops_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:657570827875:subnet/subnet-022445792befa09c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022445792befa09c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "657570827875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "xops-subnet"
            },
            "tags_all": {
              "Name": "xops-subnet"
            },
            "vpc_id": "vpc-0c74e7e20cc1ddb9c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "657570827875",
            "id": "subnet-022445792befa09c0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.xops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "xops_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:657570827875:vpc/vpc-0c74e7e20cc1ddb9c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01fa7693ab0db8035",
            "default_route_table_id": "rtb-05f963141a537d6a1",
            "default_security_group_id": "sg-05123ba8e4e8bc02e",
            "dhcp_options_id": "dopt-033731cc780ecfc4c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c74e7e20cc1ddb9c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05f963141a537d6a1",
            "owner_id": "657570827875",
            "region": "us-east-1",
            "tags": {
              "Name": "xops-vpc"
            },
            "tags_all": {
              "Name": "xops-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}